--- a/.env
+++ b/.env
@@ -6,11 +6,11 @@ APP_LOG_LEVEL=debug
 APP_URL=http://localhost
 
 DB_CONNECTION=mysql
-DB_HOST=172.17.12.176
+DB_HOST=
 DB_PORT=3306
-DB_DATABASE=jqa
-DB_USERNAME=root
-DB_PASSWORD=jiqingatt
+DB_DATABASE=
+DB_USERNAME=
+DB_PASSWORD=
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
@@ -18,15 +18,15 @@ SESSION_DRIVER=file
 SESSION_LIFETIME=120
 QUEUE_DRIVER=sync
 
-REDIS_HOST=172.17.12.176
+REDIS_HOST=
 REDIS_PASSWORD=null
 REDIS_PORT=6379
 
 MAIL_DRIVER=smtp
-MAIL_HOST=smtp.163.com
-MAIL_PORT=465
-MAIL_USERNAME=liumenglongya@163.com
-MAIL_PASSWORD=1758812645a
+MAIL_HOST=
+MAIL_PORT=
+MAIL_USERNAME=
+MAIL_PASSWORD=
 MAIL_ENCRYPTION=null
 
 PUSHER_APP_ID=
