--- a/.env.example
+++ b/.env.example
@@ -6,11 +6,11 @@ APP_LOG_LEVEL=debug
 APP_URL=http://localhost
 
 DB_CONNECTION=mysql
-DB_HOST=127.0.0.1
-DB_PORT=3306
+DB_HOST=172.29.16.11
+DB_PORT=13306
 DB_DATABASE=homestead
-DB_USERNAME=homestead
-DB_PASSWORD=secret
+DB_USERNAME=root
+DB_PASSWORD=liuml
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
